[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/base.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/x-note.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/coin.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/empty-heart.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/heart.png" type="Texture" id=6]
[ext_resource path="res://sprites/mushroom/mushroom_inv.png" type="Texture" id=7]
[ext_resource path="res://sprites/keys/redkey.png" type="Texture" id=8]
[ext_resource path="res://sprites/fonts/PressStart.tres" type="DynamicFont" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "full",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="UI_Bottom" type="Sprite" parent="."]
position = Vector2( 320, 672 )
texture = ExtResource( 2 )

[node name="CoinX" type="Sprite" parent="."]
position = Vector2( 556, 672 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 504, 672 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Heart" type="AnimatedSprite" parent="."]
position = Vector2( 32, 672 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "full"

[node name="Heart2" type="AnimatedSprite" parent="."]
position = Vector2( 96, 672 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "full"

[node name="Heart3" type="AnimatedSprite" parent="."]
position = Vector2( 160, 672 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "full"

[node name="Heart4" type="AnimatedSprite" parent="."]
position = Vector2( 224, 672 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "full"

[node name="mushroom" type="Sprite" parent="."]
position = Vector2( 352, 672 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="redkey" type="Sprite" parent="."]
position = Vector2( 416, 672 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="CoinCount" type="RichTextLabel" parent="."]
margin_left = 564.0
margin_top = 660.0
margin_right = 628.0
margin_bottom = 696.0
custom_fonts/normal_font = ExtResource( 9 )
text = "0"

